# minepro-staking

./: .env  Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  package-lock.json  package.json  sns-init.yaml
mine_token/: canister_ids.json  deploy.sh  dfx.json
src/minepro_staking_backend/: Cargo.toml  minepro_staking_backend.did
src/minepro_staking_backend/src/: guard.rs  lib.rs  state.rs
src/minepro_staking_frontend/: index.html  package.json  tsconfig.json  vite.config.js
src/minepro_staking_frontend/declarations/minepro_staking_backend/: index.d.ts  index.js  minepro_staking_backend.did  minepro_staking_backend.did.d.ts  minepro_staking_backend.did.js
src/minepro_staking_frontend/declarations/minepro_staking_frontend/: index.d.ts  index.js
src/minepro_staking_frontend/src/: App.jsx  App.tsx  index.css  index.scss  vite-env.d.ts
src/minepro_staking_frontend/src/components/: Footer.tsx  Navigation.tsx  UnlockTime.tsx  UserInfo.tsx
src/minepro_staking_frontend/src/components/helpers/: Approve.tsx  useTransactionToast.tsx
test/: canister_ids.json  deploy.sh  dfx.json
