[package]
name = "minepro_staking_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.15"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.15.0"
icrc-ledger-types = "0.1.6"
include-base64 = "0.1"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"
ic-certified-map = "0.4"
sha2 = "0.10.2"
serde_cbor = "0.11.2"
base64 = "0.13.0"
num-bigint = "0.4.6"
